[project]
name = "podman-workshop"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pranav", email = "pranavap96@gmail.com" }
]

requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.7.2",
]

[project.scripts]
hellomeow = "hellomeow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hellomeow"]
